# Warden

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
RPG/: game.c  game.h  game_actions.c  game_combat.c  game_shared.h  game_state.c  game_tui.c  game_ui.c  game_utils.c  game_world.c  main.c
docs/: ARCHITECTURE.md  MIGRATION.md
include/engine/: audio.h  core_loop.h  engine.h  entity.h  input.h  physics.h  render.h  resource.h  scene.h  utils.h
include/game/: game.h
src/: main.c
src/engine/: audio.c  core_loop.c  resource.c  utils.c
src/game/: actions.c  combat.c  game_shared.h  game_tui.c  game_tui.h  state.c  ui.c  world.c
tests/: test_utils.c
